force-app/main/default/objects/INTGR_Field_Mapping__c/INTGR_Field_Mapping__c.object-meta.xml
<CustomObject>
    <description>!!! INTEGRATION OBJECT- DO NOT ALTER !!!
NICC-032393</description>
    <label>Integration Field Mapping</label>
    <nameField>
        <displayFormat>IFM-{00000}</displayFormat>
        <label>Integration Field Mapping Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Integration Field Mappings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>