force-app/main/default/objects/INTGR_Field_Mapping__c/fields/Integration_Account__c.field-meta.xml
<CustomField>
    <fullName>Integration_Account__c</fullName>
    <description>NICC-030216 - Lookup to parent integration account the mapping is for.</description>
    <inlineHelpText>Lookup to parent integration account the mapping is for.</inlineHelpText>
    <label>Integration Account</label>
    <referenceTo>INTGR_Account__c</referenceTo>
    <relationshipLabel>Integration Field Mappings</relationshipLabel>
    <relationshipName>Integration_Field_Mappings</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>