force-app/main/default/objects/INTGR_Field_Mapping__c/fields/Target_Field__c.field-meta.xml
<CustomField>
    <fullName>Target_Field__c</fullName>
    <description>NICC-030216 - API name of object in the customer&apos;s ITSM that the Target_Field__c is on. Maps to Source_Object_API_Name__c specified.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>API name of object in the customer&apos;s ITSM that the Target_Field__c is on. Maps to Source_Object_API_Name__c specified.</inlineHelpText>
    <label>Target Field</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>