force-app/main/default/objects/INTGR_Field_Mapping__c/fields/Target_Object_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Target_Object_API_Name__c</fullName>
    <description>NICC-030216 - API name of object in customer&apos;s ITSM that the Target_Field__c is on. Maps to Source_Object_API_Name__c specified.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>API name of object in customer&apos;s ITSM that the Target_Field__c is on. Maps to Source_Object_API_Name__c specified.</inlineHelpText>
    <label>Target Object API Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>